<?xml version="1.0"?>
<package>
  <name>crtk_python_client</name>
  <version>1.0.0</version>
  <description>crtk Python client</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <maintainer email="amunawar@wpi.edu">Adnan Munawar</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
